--- a/spotify_data_get.ipynb
+++ b/spotify_data_get.ipynb
@@ -569,11 +569,11 @@
     "def get_artist_uri(artist_uri):\n",
     "    try:\n",
     "        response = sp.artist(artist_uri)\n",
-    "        info_dict = {'Name': response['name'], \n",
-    "                     'URI': response['uri'], \n",
-    "                     'Popularity': response['popularity'], \n",
-    "                     'Genres': response['genres'], \n",
-    "                     'Followers': response['followers']['total']}\n",
+    "        info_dict = {'name': response['name'], \n",
+    "                     'artist_uri': response['uri'], \n",
+    "                     'popularity': response['popularity'], \n",
+    "                     'genres': response['genres'], \n",
+    "                     'followers': response['followers']['total']}\n",
     "        return(info_dict)\n",
     "    except Exception as e:\n",
     "        print(f'An error occured: {e} for the artist: {artist_uri}')\n",
@@ -694,46 +694,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 181,
-   "id": "48a8f05e-7fb7-46d6-8ddb-00b1164333ec",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'external_urls': {'spotify': 'https://open.spotify.com/artist/23aPUZaR8bESXN4UD3T2Sx'},\n",
-       " 'followers': {'href': None, 'total': 25129},\n",
-       " 'genres': [],\n",
-       " 'href': 'https://api.spotify.com/v1/artists/23aPUZaR8bESXN4UD3T2Sx',\n",
-       " 'id': '23aPUZaR8bESXN4UD3T2Sx',\n",
-       " 'images': [{'height': 640,\n",
-       "   'url': 'https://i.scdn.co/image/ab6761610000e5ebb08fef18649cc4c3b2396258',\n",
-       "   'width': 640},\n",
-       "  {'height': 320,\n",
-       "   'url': 'https://i.scdn.co/image/ab67616100005174b08fef18649cc4c3b2396258',\n",
-       "   'width': 320},\n",
-       "  {'height': 160,\n",
-       "   'url': 'https://i.scdn.co/image/ab6761610000f178b08fef18649cc4c3b2396258',\n",
-       "   'width': 160}],\n",
-       " 'name': '香取慎吾',\n",
-       " 'popularity': 29,\n",
-       " 'type': 'artist',\n",
-       " 'uri': 'spotify:artist:23aPUZaR8bESXN4UD3T2Sx'}"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_response"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d32d3440-b7b7-4d3f-8b67-8907644005cc",
    "metadata": {
@@ -759,7 +719,7 @@
     "        for album in results['items']:\n",
     "            all_albums.append({'name': album['name'],\n",
     "                               'id': album['id'],\n",
-    "                               'uri': album['uri'],\n",
+    "                               'album_uri': album['uri'],\n",
     "                               'album_group': album['album_group'],\n",
     "                               'album_type': album['album_type'],\n",
     "                               'type': album['type'],\n",
@@ -769,7 +729,7 @@
     "                               'total_tracks': album['total_tracks'],\n",
     "                               'external_urls': album['external_urls'],\n",
     "                               'artist_name': [artist['name'] for artist in album['artists']],\n",
-    "                               'artist_uri': [artist['uri'] for artist in album['artists']]\n",
+    "                               'artist_uri_list': [artist['uri'] for artist in album['artists']]\n",
     "                              })\n",
     "        return(all_albums)\n",
     "    except Exception as e:\n",
@@ -1264,7 +1224,7 @@
     "                                'album_name': curr_album_name,\n",
     "                                'album_uri': curr_album_uri,\n",
     "                                'artists': song['artists'],\n",
-    "                                'uri': song['uri'],\n",
+    "                                'track_uri': song['uri'],\n",
     "                                'id': song['id'],\n",
     "                                'disc_num': song['disc_number'],\n",
     "                                'song_num': song['track_number'],\n",
@@ -1634,7 +1594,8 @@
     "    'name_new': 'name',\n",
     "    'album_name_new': 'album_name',\n",
     "    'album_uri_new': 'album_uri',\n",
-    "    'artists_new': 'artists'\n",
+    "    'artists_new': 'artists',\n",
+    "    'uri': 'track_uri'\n",
     "}, inplace = True)\n",
     "\n",
     "# Drop duplicates\n",
