7/8/2024 - Created and Testing Module
Created a module to house all the functions. Currently troubleshooting them to get them to work when imported

--- a/scripts/testing.ipynb
+++ b/scripts/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 116,
    "id": "25317b05-2f0e-4992-8306-566d1a57c733",
    "metadata": {
     "tags": []
@@ -11,7 +11,10 @@
    "source": [
     "import pandas as pd\n",
     "import time\n",
-    "import ast"
+    "import ast\n",
+    "\n",
+    "\n",
+    "import song_model_df"
    ]
   },
   {
@@ -50,52 +53,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "61608cf8-c309-4f53-b873-d6d448b5a39c",
-   "metadata": {},
-   "source": [
-    "# API Tests"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 410,
-   "id": "cb7648eb-57dc-4368-819a-bbe57ba62496",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def api_test(sources, func, sp):\n",
-    "    to_add = []\n",
-    "    start_time = time.time()\n",
-    "    \n",
-    "    for item in sources:\n",
-    "        to_add.append(func(sp, item))\n",
-    "    \n",
-    "    print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
-    "    print(f'Length of to_add: {len(to_add)} dudes')\n",
-    "    \n",
-    "    print(to_add)\n",
-    "    return(to_add)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 358,
-   "id": "6c2e6e1d-cf05-48e2-a8a1-7e5e6451d208",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from songmellier_mod import api_DF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 384,
-   "id": "bf651e2c-b695-460a-a290-95568c50e906",
+   "execution_count": 151,
+   "id": "0a5d7ae0-9a1d-4914-a2f9-bf3476ec20c9",
    "metadata": {
     "tags": []
    },
@@ -116,54 +76,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53773dd5-e0ae-453a-95f0-5afdf3465f66",
+   "metadata": {},
+   "source": [
+    "import sp_dataGet_df\n",
+    "\n",
+    "sp_api = spAPIget(sp)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 351,
+   "id": "bf651e2c-b695-460a-a290-95568c50e906",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'songmellier_mod.api_DF' has no attribute 'sp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[351], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msongmellier_mod\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m api_DF\n\u001b[1;32m----> 3\u001b[0m \u001b[43mapi_DF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msp\u001b[49m()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'songmellier_mod.api_DF' has no attribute 'sp'"
+     ]
+    }
+   ],
+   "source": [
+    "from songmellier_mod import api_DF\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
    "id": "13f60bb7-d1a2-479d-8b59-93adffa52b5d",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 0.0 seconds ---\n",
-      "Length of to_add: 2 dudes\n",
-      "[<bound method APIget.artist_by_name of <songmellier_mod.api_DF.APIget object at 0x000002BA62AC14E0>>, <bound method APIget.artist_by_name of <songmellier_mod.api_DF.APIget object at 0x000002BA62AC14E0>>]\n"
+     "ename": "TypeError",
+     "evalue": "APIget.artist_by_name() missing 1 required positional argument: 'artist_name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[345], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m to_add_artistNames:\n\u001b[1;32m----> 7\u001b[0m     to_add\u001b[38;5;241m.\u001b[39mappend(\u001b[43mapi_DF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mAPIget\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43martist_by_name\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m--- \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m seconds ---\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m start_time))\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLength of to_add: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(to_add)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m dudes\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: APIget.artist_by_name() missing 1 required positional argument: 'artist_name'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[<bound method APIget.artist_by_name of <songmellier_mod.api_DF.APIget object at 0x000002BA62AC14E0>>,\n",
-       " <bound method APIget.artist_by_name of <songmellier_mod.api_DF.APIget object at 0x000002BA62AC14E0>>]"
-      ]
-     },
-     "execution_count": 418,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "to_add_artistNames = ['Laufey', 'Chappell Roan']\n",
-    "# to_add = []\n",
+    "to_add = []\n",
     "\n",
-    "# start_time = time.time()\n",
+    "start_time = time.time()\n",
     "\n",
-    "# for name in to_add_artistNames:\n",
-    "#     to_add.append(api_DF.APIget.artist_by_name(sp, name))\n",
+    "for name in to_add_artistNames:\n",
+    "    to_add.append(api_DF.APIget.artist_by_name(name))\n",
     "\n",
-    "# print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
-    "# print(f'Length of to_add: {len(to_add)} dudes')\n",
-    "# to_add\n",
-    "\n",
-    "APIget = api_DF.APIget()\n",
-    "api_test(to_add_artistNames, APIget.artist_by_name, sp)"
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(f'Length of to_add: {len(to_add)} dudes')\n",
+    "to_add"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 301,
    "id": "c84b536c-24d1-4607-97e2-c161a7b84752",
    "metadata": {
     "tags": []
@@ -185,13 +168,13 @@
        "[None, None]"
       ]
      },
-     "execution_count": 364,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Artist by URI\n",
+    "# from sp_dataGet_df import sp_api\n",
     "\n",
     "to_add_artistURIs = ['spotify:artist:7gW0r5CkdEUMm42w9XpyZO', 'spotify:artist:7GlBOeep6PqTfFi59PTUUN'] \n",
     "to_add_uris = []\n",
@@ -215,13 +198,7 @@
    },
    "outputs": [],
    "source": [
-    "# Artist by playlist(url)\n",
-    "to_add_playlists = ['https://open.spotify.com/playlist/37i9dQZF1DX2L0iB23Enbq?si=9c1712c0ec0c475b',\n",
-    "                   'https://open.spotify.com/playlist/37i9dQZEVXbLRQDuF5jeBp?si=7fe085dfdf574fc1']\n",
-    "to_add_aFp = []\n",
-    "\n",
-    "start_time = \n",
-    "for url in to_add_playlists"
+    "test = sp.artist('7gW0r5CkdEUMm42w9XpyZO')"
    ]
   },
   {
