--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 7,
    "id": "25317b05-2f0e-4992-8306-566d1a57c733",
    "metadata": {
     "tags": []
@@ -11,12 +11,13 @@
    "source": [
     "import pandas as pd\n",
     "import time\n",
-    "import ast"
+    "import ast\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "40979e82-9430-4f6b-baf2-8ccd01618e49",
    "metadata": {
     "tags": []
@@ -27,6 +28,27 @@
     "artist_info = pd.read_csv('data/artist_info.csv')\n",
     "album_tracks = pd.read_csv('data/album_tracks.csv')\n",
     "album_info = pd.read_csv('data/album_info.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "22b590d7-4836-40d1-8d82-dd2665b9677b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Size in MegaBytes is 100.71657466888428\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_stats = os.stat('data/feat_df.csv')\n",
+    "print(f'File Size in MegaBytes is {file_stats.st_size / (1024 * 1024)}')"
    ]
   },
   {
@@ -52,7 +74,9 @@
   {
    "cell_type": "markdown",
    "id": "61608cf8-c309-4f53-b873-d6d448b5a39c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# API Tests"
    ]
@@ -325,6 +349,22 @@
    "source": [
     "artist_info[artist_info['name'] == 'Chappell Roan']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13a7687e-02aa-40ae-aa6a-cf2c212f75e7",
+   "metadata": {},
+   "source": [
+    "# Model Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c98092cd-b703-4225-8599-f13b92e4fd36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
